--- a/src/content/index.hbs
+++ b/src/content/index.hbs
@@ -4,79 +4,5 @@ page: "home"
 
 published: true
 ---
-<section class="slider slider-resizable swipe" id="slider" data-show="on-scroll">
-    <div class="swipe-wrap">
-        <figure class="slide slide-nike-fuelguide">
-            <a href="/work/nike/fuelguide/">
-                <picture>
-                    <!--[if IE 9]><video style="display: none;"><![endif]-->
-                    <source srcset="/work/nike/fuelguide/img/homepage-feature-extra-large.jpg" media="(min-width: 1300px)">
-                    <source srcset="/work/nike/fuelguide/img/homepage-feature-large.jpg" media="(min-width: 800px)">
-                    <source srcset="/work/nike/fuelguide/img/homepage-feature-medium.jpg" media="(min-width: 600px)">
-                    <source srcset="/work/nike/fuelguide/img/homepage-feature-small.jpg">
-                    <!--[if IE 9]></video><![endif]-->
-                    <img src="/work/nike/fuelguide/img/homepage-feature-medium.jpg" srcset="/work/nike/fuelguide/img/homepage-feature-small.jpg" alt="Nike Fuelguide">
-                </picture>
-            </a>
-            <div class="content">
-                <div>
-                    <div>
-                        <h1>Nike</h1>
-                        <h2>NikeFuel Guide</h2>
-                    </div>
-                </div>
-            </div>
-        </figure>
-
-        <figure class="slide slide-nissan-idx">
-            <a href="/work/nissan/idx/">
-                <picture>
-                    <!--[if IE 9]><video style="display: none;"><![endif]-->
-                    <source srcset="/work/nissan/idx/img/homepage-feature-extra-large.jpg" media="(min-width: 1300px)">
-                    <source srcset="/work/nissan/idx/img/homepage-feature-large.jpg" media="(min-width: 800px)">
-                    <source srcset="/work/nissan/idx/img/homepage-feature-medium.jpg" media="(min-width: 600px)">
-                    <source srcset="/work/nissan/idx/img/homepage-feature-small.jpg">
-                    <!--[if IE 9]></video><![endif]-->
-                    <img src="/work/nissan/idx/img/homepage-feature-medium.jpg" srcset="/work/nissan/idx/img/homepage-feature-small.jpg" alt="Nissan IDx">
-                </picture>
-            </a>
-            <div class="content">
-                <div>
-                    <div>
-                        <h1>Nissan</h1>
-                        <h2>IDx</h2>
-                    </div>
-                </div>
-            </div>
-        </figure>
-
-        <figure class="slide slide-future-lions">
-            <a href="/work/akqa/future-lions/">
-                <picture>
-                    <!--[if IE 9]><video style="display: none;"><![endif]-->
-                    <source srcset="/work/akqa/future-lions/img/homepage-feature-extra-large.jpg" media="(min-width: 1300px)">
-                    <source srcset="/work/akqa/future-lions/img/homepage-feature-large.jpg" media="(min-width: 800px)">
-                    <source srcset="/work/akqa/future-lions/img/homepage-feature-medium.jpg" media="(min-width: 600px)">
-                    <source srcset="/work/akqa/future-lions/img/homepage-feature-small.jpg">
-                    <!--[if IE 9]></video><![endif]-->
-                    <img src="/work/akqa/future-lions/img/homepage-feature-medium.jpg" srcset="/work/akqa/future-lions/img/homepage-feature-small.jpg" alt="Future Lions">
-                </picture>
-            </a>
-            <div class="content">
-                <div>
-                    <div>
-                        <h1>AKQA</h1>
-                        <h2>Future Lions</h2>
-                    </div>
-                </div>
-            </div>
-        </figure>
-    </div>
-</section>
-
-<section class="statement" data-show="on-scroll">
-    <p>
-        AKQA is an ideas and innovation company. We exist to create the future for our clients.
-    </p>
-    <a href="/services">View Services</a>
+<section>
 </section>
