--- a/src/templates/partials/header.hbs
+++ b/src/templates/partials/header.hbs
@@ -20,8 +20,8 @@
     <link rel="publisher" href="https://plus.google.com/communities/116529974266844528013"/>
     <link rel="dns-prefetch" href="//www.google-analytics.com" />
 
-    <!-- build:css /assets/css/main.min.css -->
-    <link href="/assets/css/main.css" rel="stylesheet">
+    <!-- build:css /assets/css/style.min.css -->
+    <link href="/assets/css/styles.css" rel="stylesheet">
     <!-- endbuild -->
 	{{#if this.page.data.css}}
         <link rel="stylesheet" href="{{ this.page.data.css }}">
