--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -12,7 +12,10 @@
 @import "libs/border-box";
 
 @import "main";
+@import "header/header";
 @import "sections/sections";
+
+@import "header/navigation";
 
 
 
