--- a/src/sass/fonts/_fonts.scss
+++ b/src/sass/fonts/_fonts.scss
@@ -1,31 +1,22 @@
-
-@font-face{
-    font-family:"PlutoBlack";
-    src:url("../fonts/PlutoW01Black.eot?#iefix");
-    src:url("../fonts/PlutoW01Black.eot?#iefix") format("eot"),
-    url("../fonts/PlutoW01Black.woff") format("woff"),
-    url("../fonts/PlutoW01Black.ttf") format("truetype"),
-    url("../fonts/PlutoW01Black.svg#PlutoBlack") format("svg");
+@font-face {
+    font-family: 'droid_sansbold';
+    src: url('../fonts/DroidSans-Bold-webfont.eot');
+    src: url('../fonts/DroidSans-Bold-webfont.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/DroidSans-Bold-webfont.woff') format('woff'),
+    url('../fonts/DroidSans-Bold-webfont.ttf') format('truetype'),
+    url('../fonts/DroidSans-Bold-webfont.svg#droid_sansbold') format('svg');
     font-weight: normal;
     font-style: normal;
 }
-
-@font-face{
-    font-family:"FrankfurterComMedium";
-    src:url("../fonts/FrankfurterW02Medium.eot?#iefix");
-    src:url("../fonts/FrankfurterW02Medium.eot?#iefix") format("eot"),
-    url("../fonts/FrankfurterW02Medium.woff") format("woff"),
-    url("../fonts/FrankfurterW02Medium.ttf") format("truetype"),
-    url("../fonts/FrankfurterW02Medium.svg#FrankfurterComMedium") format("svg");
-}
-
-@font-face{
-    font-family:"PlutoRegular";
-    src:url("../fonts/PlutoW01Regular.eot?#iefix");
-    src:url("../fonts/PlutoW01Regular.eot?#iefix") format("eot"),
-    url("../fonts/PlutoW01Regular.woff") format("woff"),
-    url("../fonts/PlutoW01Regular.ttf") format("truetype"),
-    url("../fonts/PlutoW01Regular.svg#PlutoRegular") format("svg");
+@font-face {
+    font-family: 'droid_sansregular';
+    src: url('../fonts/DroidSans-webfont.eot');
+    src: url('../fonts/DroidSans-webfont.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/DroidSans-webfont.woff') format('woff'),
+    url('../fonts/DroidSans-webfont.ttf') format('truetype'),
+    url('../fonts/DroidSans-webfont.svg#droid_sansregular') format('svg');
     font-weight: normal;
     font-style: normal;
+
 }
+
