--- a/src/templates/partials/header.hbs
+++ b/src/templates/partials/header.hbs
@@ -36,11 +36,12 @@
 <body>
 
 	<header class="header">
-		<h1>
+		<h1 class="logo">
 			<a href="/">Rajawali3d</a>
 		</h1>
         <nav class="nav">
-            <a href="#navigation" class="mobile-nav">Navigation</a>
+            <a href="#navigation" class="nav-icon-mobile">Navigation</a>
+            <div class="active-item-background"></div>
             <ul>
                 <li><a href="/news/"{{#is this.page.data.section 'News'}} class="selected"{{/is}}>NEWS</a></li>
                 <li><a href="/features/"{{#is this.page.data.section 'Features'}} class="selected"{{/is}}>FEATURES</a></li>
@@ -50,6 +51,7 @@
                 <li><a href="/get-involved/"{{#is this.page.data.section 'Get Involved'}} class="selected"{{/is}}>GET INVOLVED</a></li>
                 <li><a href="/donate/"{{#is this.page.data.section 'Donate'}} class="selected"{{/is}}>DONATE</a></li>
             </ul>
+
         </nav>
 	</header>
 
