added almond and require to build

--- a/src/templates/partials/footer.hbs
+++ b/src/templates/partials/footer.hbs
@@ -1,4 +1,9 @@
 <footer class="footer">
 
 </footer>
+	<!-- build:js /assets/js/main.min.js -->
+		<!--SCRIPTS-->
+		<!--SCRIPTS END-->
+	<!-- endbuild -->
 </body>
+</html>
