--- a/src/templates/partials/footer.hbs
+++ b/src/templates/partials/footer.hbs
@@ -1,8 +1,8 @@
 <footer class="footer">
 
 </footer>
-	<!-- build:js /assets/js/main.min.js -->
-
+	<!-- build:js /assets/js/app.min.js -->
+        <script async src="../assets/js/app.js"></script>
 	<!-- endbuild -->
 </body>
 </html>
