--- a/src/templates/partials/header.hbs
+++ b/src/templates/partials/header.hbs
@@ -28,7 +28,7 @@
 	{{/if}}
 
     <!-- build:js /assets/js/modernizr.min.js -->
-    <script src="/assets/js/modernizr.js"></script>
+    <!--<script src="/assets/js/modernizr.js"></script>-->
     <!-- endbuild -->
 
 </head>
