--- a/src/templates/partials/footer.hbs
+++ b/src/templates/partials/footer.hbs
@@ -2,7 +2,7 @@
 
 </footer>
 	<!-- build:js /assets/js/app.min.js -->
-        <script async src="/assets/js/app.js"></script>
+        <script src="/assets/js/app.js"></script>
 	<!-- endbuild -->
 </body>
 </html>
