--- a/src/templates/layouts/tutorial.hbs
+++ b/src/templates/layouts/tutorial.hbs
@@ -1,12 +1,9 @@
-<div class="container">
-    <div class="panel panel-docs panel-clear">
+{{> header }}
+<main class="main">
 
+	{{#markdown}}
+		{{> body }}
+	{{/markdown}}
+</main>
 
-            <p>{{{description}}}</p>
-
-
-        {{#markdown}}
-            {{> body }}
-        {{/markdown}}
-    </div>
-</div>
+{{> footer }}
