--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,6 +1,6 @@
 
 @import "libs/reset";
-@import "syntax/github";
+@import "syntax/magula";
 /* MIXINS */
 @import "libs/bourbon/bourbon";
 @import "mixins/mixins";
