--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -1,10 +1,14 @@
 html {
     min-height: 100%;
-
+    box-sizing: border-box;
 }
 html,body {
     width: 100%;
 
+}
+
+*, *:before, *:after {
+    box-sizing: inherit;
 }
 
 body {
